main.css
:root {
    --accent: #ffffff;
    --bg: #000000;
  }
  
  * {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    /* overflow: hidden; */
  }

  @font-face {
    font-family: "Arame Mono";
    src: url("/res/fonts/ArameMono.ttf") format("truetype");
}

html,
body {
  width: 100vw;
  height: 100vh;
  background-color: var(--bg);
  font-family: "Arame Mono";
}

.menu-container {
  z-index: 1000;
    position: fixed;
    top: 1rem;
    right: 1rem;
    width: 200px;
    height: 35px;
    /* changed here */
    overflow: hidden;
  }
  
  .menu-container .col {
    position: absolute;
    width: 200px;
    cursor: pointer;
  }
  
  .menu-container .col:nth-child(1) {
    left: 0;
  }

  .menu-container .col:nth-child(2) {
    left: 200px;
  }
  
  .menu-container .col .menu-item {
    background: var(--accent);
    color: var(--bg);
    margin: 0.075rem;
    padding: 0.075rem;
    font-size: 25px;
  }

  .menu-container .col-2 .menu-item {
    position: relative;
    left: 200px;
  }
  
  .marquee-container {
    z-index: 1001;
    position: absolute;
    right: 0;
    width: 150px;
    padding: 0.5rem;
    background-color: var(--bg);
    color: var(--accent);
    border: 2px solid var(--accent);
    pointer-events: none;
    display: none;
    transform: scale(0);
    overflow: hidden;
  }
  
  .marquee-container .marquee {
    width: 2000px;
    font-size: 13px;
  }

  #three-js-container {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;  
    height: 100%;
    z-index: 1;
  } 

